fix person mobile

--- a/assets/sass/_theme/persons/_widgets.sass
+++ b/assets/sass/_theme/persons/_widgets.sass
@@ -15,7 +15,7 @@
             padding-right: 0
             @include media-breakpoint-down(md)
                 float: left
-                max-width: calc(100% - 5rem)
+                max-width: calc(100% - 6rem)
                 padding-bottom: 0
                 padding-top: 0
 
